tests/snapshots/transactions/submit/bad_private_key.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - "--url=http://localhost:35423"
    - transactions
    - submit
    - a46f5fb14ae87d3d776d5a76823b238e0ddad43d8e6f6f8f40299ba0ec85e230
    - 00040080004e20c1174876e80001ccb4a237b769377b8ebe2326104daf6ee211daada428ee5e21c50c8b63be65c1072555980002ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff8810602c40de0b6b3a764000000622990ad7be0a3d163562c10fd7985ef40a3e41857e7a1583406a785efc9273a00000000000000000000c6d3c1d647b478e
    - "--private-key"
    - 609abeb3455aef1b832da331d168e13dd8f565f6c053e6f00cbd15e50e0d
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid private key format
