tests/snapshots/transactions/submit/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - submit
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --private-key <PRIVATE_KEY>
  <TX_ID>
  <UNSIGNED_TX>

Usage: kermit transactions submit --private-key <PRIVATE_KEY> <TX_ID> <UNSIGNED_TX>

For more information, try '--help'.
