tests/snapshots/transactions/submit/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - submit
    - a46f5fb14ae87d3d776d5a76823b238e0ddad43d8e6f6f8f40299ba0ec85e230
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --private-key <PRIVATE_KEY>
  <UNSIGNED_TX>

Usage: kermit transactions submit --private-key <PRIVATE_KEY> <TX_ID> <UNSIGNED_TX>

For more information, try '--help'.
